# Antigravity-Tools-LS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_ZH.md  install.ps1
.github/workflows/: docker-publish.yml  release.yml
Casks/: antigravity-tools-ls.rb
apps/cli-server/: Cargo.toml
apps/cli-server/src/: constants.rs  extractors.rs  key_manager.rs  lib.rs  logger.rs  main.rs  state.rs  traffic_db.rs
apps/cli-server/src/handlers/: account.rs  account_events.rs  auth.rs  chat.rs  instances.rs  keys.rs  logs.rs  mod.rs  monitor.rs  probes.rs  provision.rs  proxy.rs  settings.rs  stats.rs  version.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: 32x32.tiff  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web-dashboard/: README.md  index.html  package-lock.json  vite.config.js
apps/web-dashboard/src/: App.jsx  index.css  main.jsx
apps/web-dashboard/src/api/: client.js
apps/web-dashboard/src/api/services/: account.js  key.js  process.js  settings.js  stats.js
apps/web-dashboard/src/components/: AddAccountModal.jsx  Header.jsx  Modal.jsx  NotificationCenter.jsx  Sidebar.jsx  Toast.jsx
apps/web-dashboard/src/components/Dashboard/: MatrixCards.jsx  MatrixCharts.jsx
apps/web-dashboard/src/hooks/: useSpotlight.js
apps/web-dashboard/src/i18n/: config.js
apps/web-dashboard/src/layouts/: RootLayout.jsx
apps/web-dashboard/src/locales/: en.json  zh.json
apps/web-dashboard/src/pages/: About.jsx  Accounts.jsx  Dashboard.jsx  Integration.jsx  Keys.jsx  Monitor.jsx  Processes.jsx  Settings.jsx  Stats.jsx
apps/web-dashboard/src/store/: useAccountStore.js  useAppStore.js  useKeyStore.js  useProcessStore.js  useSettingsStore.js  useStatsStore.js
docs/: Linux_Deployment_OOM_Guide.md
ls-accounts/: Cargo.toml
ls-accounts/src/: lib.rs  model.rs  store.rs
ls-orchestrator/: Cargo.toml
ls-orchestrator/src/: extension_server.rs  lib.rs  mock.rs  native.rs  provider.rs
transcoder-core/: Cargo.toml  build.rs
transcoder-core/src/: anthropic.rs  common.rs  constants.rs  gemini.rs  ide.rs  lib.rs  openai.rs  provisioner.rs  stats.rs  tools.rs  version.rs
transcoder-core/src/cascade/: client.rs  mod.rs
transcoder-core/src/mappers/: anthropic.rs  engine.rs  gemini.rs  mod.rs  openai.rs
