[package]
name = "ls-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde_json.workspace = true
md5 = "0.8.0"
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
bytes = "1.0"
http-body-util = "0.1"
transcoder-core = { path = "../transcoder-core" }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
portpicker = "0.1.1"
