[package]
name = "transcoder-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic = { workspace = true, features = ["tls"] }
prost.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio-stream = "0.1.18"
prost-types = "0.13.5"
uuid = { workspace = true, features = ["v4"] }
base64.workspace = true
async-trait.workspace = true
ls-accounts = { path = "../ls-accounts" }
rusqlite.workspace = true
chrono.workspace = true
plist.workspace = true
reqwest.workspace = true
regex.workspace = true
tar.workspace = true
flate2.workspace = true
walkdir.workspace = true
sysinfo.workspace = true
dirs.workspace = true
rand.workspace = true
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.12"
protox = "0.7"

