[package]
name = "cli-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli_server"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tonic.workspace = true
rusqlite.workspace = true

# 工作空间内的同级信赖链接
transcoder-core = { path = "../../transcoder-core" }
ls-orchestrator = { path = "../../ls-orchestrator" }
ls-accounts = { path = "../../ls-accounts" }
async-stream = "0.3.6"
reqwest = { version = "0.13.2", features = ["form", "json", "stream"] }
url = "2.5.8"
open = "5.3.3"
serde_urlencoded = "0.7"
md5 = "0.7"
uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"
sha2.workspace = true
tokio-stream = "0.1.18"
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
tracing-appender = "0.2.4"
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
futures = "0.3"
sysinfo.workspace = true
dirs.workspace = true
rfd = "0.15"
